# advent-of-code-2021

./: .gitignore  Build.hs  LICENSE  README.md  aoc-dev.cabal  aoc2021.cabal  cabal.project.freeze  feed.xml  reflections.md  stack.yaml
app/: aoc.hs
draft/: day03.md
reflections/: day01.md  day02.md
reflections-out/: day01.md  day02.md
script/: open_files.vim
src/: AOC.hs
src/AOC/: Challenge.hs  Common.hs  Discover.hs  Prelude.hs  Run.hs  Solver.hs  Util.hs
src/AOC/Challenge/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/AOC/Common/: FinitarySet.hs  OCR.hs  Point.hs
src/AOC/Run/: Config.hs  Interactive.hs  Load.hs
src/AOC/Util/: DynoMap.hs
test-data/2016/: 09b.txt
test-data/2020/: 09a.txt
test-data/2021/: 01a.txt  01b.txt  02a.txt  02b.txt  04a.txt  04b.txt  05a.txt  05b.txt  06a.txt  06b.txt  07a.txt  07b.txt  08a.txt  08b.txt  09a.txt  09b.txt  10a.txt  10b.txt  11a.txt  11b.txt  12a.txt  12b.txt  13a.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  17a.txt  17b.txt
